--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -1,399 +1,128 @@
 - languages:
-  title: Language Specific Linters
-  plural: Linters
+  title: Language Specific Builders
   modal: language
   types:
-    - title: JavaScript
-      modal: js
-      packages:
-        - title: linter-jshint
-          url: https://atom.io/packages/linter-jshint
-        - title: linter-jscs
-          url: https://atom.io/packages/linter-jscs
-        - title: linter-eslint
-          url: https://atom.io/packages/linter-eslint
-        - title: linter-flow
-          url: https://atom.io/packages/linter-flow
-        - title: linter-js-standard
-          url: https://atom.io/packages/linter-js-standard
-        - title: linter-xo
-          url: https://atom.io/packages/linter-xo
-        - title: linter-marlint
-          url: https://atom.io/packages/linter-marlint
-        - title: linter-liferay
-          url: https://atom.io/packages/linter-liferay
-        - title: linter-gjslint
-          url: https://atom.io/packages/linter-gjslint
-    - title: CoffeeScript
-      modal: coffee
-      packages:
-        - title: linter-coffeelint
-          url: https://atom.io/packages/linter-coffeelint
-        - title: linter-coffeescript
-          url: https://atom.io/packages/linter-coffeescript
-    - title: ColdFusion
-      modal: cf
-      packages:
-        - title: linter-cflint
-          url: https://atom.io/packages/linter-cflint
-    - title: TypeScript
-      modal: ts
-      packages:
-        - title: linter-tslint
-          url: https://atom.io/packages/linter-tslint
-    - title: LiveScript
-      modal: ls
-      packages:
-        - title: linter-lsc
-          url: https://atom.io/packages/linter-lsc
-    - title: Ruby
-      modal: rb
-      packages:
-        - title: linter-rubocop
-          url: https://atom.io/packages/linter-rubocop
-        - title: linter-ruby
-          url: https://atom.io/packages/linter-ruby
-        - title: linter-reek
-          url: https://atom.io/packages/linter-reek
-        - title: linter-ruby-reek
-          url: https://atom.io/packages/linter-ruby-reek
-    - title: Haml
-      modal: haml
-      packages:
-        - title: linter-haml
-          url: https://atom.io/packages/linter-haml
-    - title: PHP
-      modal: php
-      packages:
-        - title: linter-php
-          url: https://atom.io/packages/linter-php
-        - title: linter-phpcs
-          url: https://atom.io/packages/linter-phpcs
-        - title: linter-phpmd
-          url: https://atom.io/packages/linter-phpmd
-    - title: Python
-      modal: py
-      packages:
-        - title: linter-pylint
-          url: https://atom.io/packages/linter-pylint
-        - title: linter-pep8
-          url: https://atom.io/packages/linter-pep8
-        - title: linter-pep257
-          url: https://atom.io/packages/linter-pep257
-        - title: linter-flake8
-          url: https://atom.io/packages/linter-flake8
-        - title: linter-pylama
-          url: https://atom.io/packages/linter-pylama
-    - title: Java
-      modal: java
-      packages:
-        - title: linter-javac
-          url: https://atom.io/packages/linter-javac
-    - title: CSS
-      modal: css
-      packages:
-        - title: linter-csslint
-          url: https://atom.io/packages/linter-csslint
-        - title: linter-liferay
-          url: https://atom.io/packages/linter-liferay
-    - title: Sass
-      modal: sass
-      packages:
-        - title: linter-scss-lint
-          url: https://atom.io/packages/linter-scss-lint
-        - title: linter-9e-sass
-          url: https://atom.io/packages/linter-9e-sass
-        - title: linter-sass-lint
-          url: https://atom.io/packages/linter-sass-lint
-    - title: SCSS
-      modal: scss
-      packages:
-        - title: linter-scss-lint
-          url: https://atom.io/packages/linter-scss-lint
-        - title: linter-liferay
-          url: https://atom.io/packages/linter-liferay
-        - title: linter-sass-lint
-          url: https://atom.io/packages/linter-sass-lint
-    - title: less
-      modal: less
-      packages:
-        - title: linter-less
-          url: https://atom.io/packages/linter-less
-    - title: stylus
-      modal: stylus
-      packages:
-        - title: linter-stylint
-          url: https://atom.io/packages/linter-stylint
-    - title: Bash
-      modal: sh
-      packages:
-        - title: linter-shellcheck
-          url: https://atom.io/packages/linter-shellcheck
-    - title: Scala
-      modal: scala
-      packages:
-        - title: linter-scalac
-          url: https://atom.io/packages/linter-scalac
-    - title: C
-      modal: c
-      packages:
-        - title: linter-clang
-          url: https://atom.io/packages/linter-clang
-        - title: linter-gcc
-          url: https://atom.io/packages/linter-gcc
-        - title: linter-moose
-          url: https://atom.io/packages/linter-moose
-        - title: linter-emscripten
-          url: https://atom.io/packages/linter-emscripten
-    - title: C++
-      modal: cpp
-      packages:
-        - title: linter-clang
-          url: https://atom.io/packages/linter-clang
-        - title: linter-gcc
-          url: https://atom.io/packages/linter-gcc
-        - title: linter-moose
-          url: https://atom.io/packages/linter-moose
-        - title: linter-emscripten
-          url: https://atom.io/packages/linter-emscripten
-    - title: Objective-C
-      modal: m
-      packages:
-        - title: linter-clang
-          url: https://atom.io/packages/linter-clang
-        - title: linter-emscripten
-          url: https://atom.io/packages/linter-emscripten
-    - title: Objective-C++
-      modal: mm
-      packages:
-        - title: linter-clang
-          url: https://atom.io/packages/linter-clang
-        - title: linter-emscripten
-          url: https://atom.io/packages/linter-emscripten
-    - title: Lua
-      modal: lua
-      packages:
-        - title: linter-lua
-          url: https://atom.io/packages/linter-lua
-        - title: linter-luacheck
-          url: https://atom.io/packages/linter-luacheck
-        - title: linter-lua-findglobals
-          url: https://atom.io/packages/linter-lua-findglobals
-        - title: linter-glua
-          url: https://atom.io/packages/linter-glua
-    - title: Clojure
-      modal: clojure
-      packages:
-        - title: linter-clojure
-          url: https://atom.io/packages/linter-clojure
-    - title: Puppet
-      modal: puppet
-      packages:
-        - title: linter-puppet-lint
-          url: https://atom.io/packages/linter-puppet-lint
-        - title: linter-puppet-parse
-          url: https://atom.io/packages/linter-puppet-parse
-        - title: linter-puppet-parser
-          url: https://atom.io/packages/linter-puppet-parser
-    - title: Yaml
-      modal: yaml
-      packages:
-        - title: linter-js-yaml
-          url: https://atom.io/packages/linter-js-yaml
-    - title: Haskell
-      modal: haskell
-      packages:
-        - title: linter-hlint
-          url: https://atom.io/packages/linter-hlint
-        - title: linter-hdevtools
-          url: https://atom.io/packages/linter-hdevtools
-    - title: HTML
-      modal: html
-      packages:
-        - title: linter-tidy
-          url: https://atom.io/packages/linter-tidy
-        - title: linter-htmlhint
-          url: https://atom.io/packages/linter-htmlhint
-        - title: linter-liferay
-          url: https://atom.io/packages/linter-liferay
-    - title: Bootstrap HTML
-      modal: twbs
-      packages:
-        - title: linter-bootlint
-          url: https://atom.io/packages/linter-bootlint
-    - title: Rust
-      modal: rust
-      packages:
-        - title: linter-rust
-          url: https://atom.io/packages/linter-rust
-    - title: Erlang
-      modal: erlang
-      packages:
-        - title: linter-erlang
-          url: https://atom.io/packages/linter-erlang
-    - title: Swift
-      modal: swift
-      packages:
-        - title: linter-swiftc
-          url: https://atom.io/packages/linter-swiftc
-        - title: linter-swiftlint
-          url: https://atom.io/packages/linter-swiftlint
-    - title: LaTeX
-      modal: latex
-      packages:
-        - title: linter-chktex
-          url: https://atom.io/packages/linter-chktex
-    - title: Crystal
-      modal: cr
-      packages:
-        - title: linter-crystal
-          url: https://atom.io/packages/linter-crystal
-    - title: Go
-      modal: go
-      packages:
-        - title: linter-golinter
-          url: https://atom.io/packages/linter-golinter
-    - title: JSON
-      modal: json
-      packages:
-        - title: linter-jsonlint
-          url: https://atom.io/packages/linter-jsonlint
-        - title: linter-package-json-validator
-          url: https://atom.io/packages/linter-package-json-validator
-    - title: Handlebars
-      modal: handlebars
-      packages:
-        - title: linter-handlebars
-          url: https://atom.io/packages/linter-handlebars
-        - title: linter-liferay
-          url: https://atom.io/packages/linter-liferay
-    - title: Jade
-      modal: jade
-      packages:
-        - title: linter-jade
-          url: https://atom.io/packages/linter-jade
-    - title: Jolie
-      modal: jolie
-      packages:
-        - title: linter-jolie
-          url: https://atom.io/packages/linter-jolie
+    # Anything which outright targets a specific language or languages belongs here.
     - title: Markdown
       modal: markdown
       packages:
-        - title: linter-markdownlint
-          url: https://atom.io/packages/linter-markdownlint
-        - title: linter-markdown
-          url: https://atom.io/packages/linter-markdown
-        - title: linter-node-markdownlint
-          url: https://atom.io/packages/linter-node-markdownlint
-    - title: Apache Velocity
-      modal: velocity
+        - title: build-markdown
+          url: https://atom.io/packages/build-markdown
+    - title: JavaScript
+      modal: js
       packages:
-        - title: linter-liferay
-          url: https://atom.io/packages/linter-liferay
-    - title: Perl
-      modal: perl
+        - title: build-gulp
+          url: https://atom.io/packages/build-gulp
+        - title: build-grunt
+          url: https://atom.io/packages/build-grunt
+        - title: build-jpm
+          url: https://atom.io/packages/build-jpm
+    - title: CoffeeScript
+      modal: CoffeeScript
       packages:
-        - title: linter-perlcritic
-          url: https://atom.io/packages/linter-perlcritic
-        - title: linter-perl
-          url: https://atom.io/packages/linter-perl
-    - title: Protocol Buffer
-      modal: protobuf
+        - title: build-gulp
+          url: https://atom.io/packages/build-gulp
+    - title: Rust
+      modal: rs
       packages:
-        - title: linter-protocol-buffer
-          url: https://atom.io/packages/linter-protocol-buffer
-    - title: CSPM
-      modal: cspm
+        - title: build-cargo
+          url: https://atom.io/packages/build-cargo
+    - title: Elixr
+      modal: ex
       packages:
-        - title: linter-cspm
-          url: https://atom.io/packages/linter-cspm
-    - title: Elm
-      modal: elm
+        - title: build-elixir
+          url: https://atom.io/packages/build-elixir
+    - title: Java
+      modal: java
       packages:
-        - title: linter-elm-make
-          url: https://atom.io/packages/linter-elm-make
-    - title: Prolog
-      modal: prolog
+        - title: build-gradle
+          url: https://atom.io/packages/build-gradle
+    - title: Groovy
+      modal: groovy
       packages:
-        - title: linter-prolog
-          url: https://atom.io/packages/linter-prolog
-    - title: Moonscript
-      modal: moonscript
+        - title: build-gradle
+          url: https://atom.io/packages/build-gradle
+    - title: Scala
+      modal: scala
       packages:
-        - title: linter-moonscript
-          url: https://atom.io/packages/linter-moonscript
-    - title: MATLAB
-      modal: matlab
-      packages:
-        - title: linter-matlab
-          url: https://atom.io/packages/linter-matlab
-    - title: XML
-      modal: xml
-      packages:
-        - title: linter-xmllint
-          url: https://atom.io/packages/linter-xmllint
-- ides:
-  title: Integrated Devlopment Environments
-  plural: IDEs
-  modal: ide
+        - title: build-gradle
+          url: https://atom.io/packages/build-gradle
+        - title: build-sbt
+          url: https://atom.io/packages/build-sbt
+- systems:
+  title: Task Runner
+  modal: runner
   types:
-    - title: C#
-      modal: cs
+    # Anything that depends on a central build manifest and runs tasks defined in the manifest belongs here.
+    - title: GNU Make
+      modal: make
       packages:
-        - title: omnisharp-atom
-          url: https://atom.io/packages/omnisharp-atom
-    - title: TypeScript
-      modal: ts
+        - title: build-make
+          url: https://atom.io/packages/build-make
+    - title: Gulp
+      modal: gulp
       packages:
-        - title: atom-typescript
-          url: https://atom.io/packages/atom-typescript
-    - title: F#
-      modal: fs
+        - title: build-gulp
+          url: https://atom.io/packages/build-gulp
+    - title: Grunt
+      modal: grunt
       packages:
-        - title: ionide-installer
-          url: https://atom.io/packages/ionide-installer
-    - title: Haskell
-      modal: hs
+        - title: build-grunt
+          url: https://atom.io/packages/build-grunt
+    - title: Cargo
+      modal: Cargo
       packages:
-        - title: ide-haskell
-          url: https://atom.io/packages/ide-haskell
-- generic:
-  title: Generic Linters
-  plural: Linters
-  modal: misc
+        - title: build-cargo
+          url: https://atom.io/packages/build-cargo
+    - title: Mix
+      modal: mix
+      packages:
+        - title: build-elixir
+          url: https://atom.io/packages/build-elixir
+    - title: Gradle
+      modal: gradle
+      packages:
+        - title: build-gradle
+          url: https://atom.io/packages/build-gradle
+    - title: Scala Build Tool
+      modal: sbt
+      packages:
+        - title: build-sbt
+          url: https://atom.io/packages/build-sbt
+- managers:
+  title: Package Manager
+  modal: manager
   types:
-    - title: Project Organization
-      modal: organization
+    # Anything whose is package managment (includes dependency management and artifact deployment) belongs here.
+    - title: Node Package Manager
+      modal: npm
       packages:
-        - title: linter-flint
-          url: https://atom.io/packages/linter-flint
-    - title: Writing Assistance
-      modal: writing
+        - title: build-npm-npm
+          url: https://atom.io/packages/build-npm-npm
+    - title: Atom Package Manager
+      modal: apm
       packages:
-        - title: linter-alex
-          url: https://atom.io/packages/linter-alex
-        - title: linter-write-good
-          url: https://atom.io/packages/linter-write-good
-        - title: linter-just-say-no
-          url: https://atom.io/packages/linter-just-say-no
-    - title: Spell Checking
-      modal: spelling
+        - title: build-npm-apm
+          url: https://atom.io/packages/build-npm-apm
+    - title: Cargo
+      modal: cargo
       packages:
-        - title: linter-scspell
-          url: https://atom.io/packages/linter-scspell
-- plugin:
-  title: Linter Plugins
-  plural: Plugins
-  modal: plugin
-  types:
-    - title: Minimap
-      modal: Minimap
+        - title: build-cargo
+          url: https://atom.io/packages/build-cargo
+    - title: Hex
+      modal: hex
       packages:
-        - title: minimap-linter
-          url: https://atom.io/packages/minimap-linter
-    - title: Docking
-      modal: docking
+        - title: build-elixir
+          url: https://atom.io/packages/build-elixir
+    - title: Maven
+      modal: mvn
       packages:
-        - title: linter-manager
-          url: https://atom.io/packages/linter-manager
+        - title: build-gradle
+          url: https://atom.io/packages/build-gradle
+        - title: build-sbt
+          url: https://atom.io/packages/build-sbt
+    - title: Mozilla Jetpack Package Manager
+      modal: jpm
+      packages:
+        - title: build-jpm
+          url: https://atom.io/packages/build-jpm
