Fix typo with Swift: build-xcodebuild

--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -73,6 +73,7 @@
       modal: swift
       packages:
         - title: build-xcodebuild
+          url: https://atom.io/packages/build-xcodebuild
 - systems:
   title: Task Runner
   modal: runner
