--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -89,6 +89,11 @@
   modal: runner
   types:
     # Anything that depends on a central build manifest and runs tasks defined in the manifest belongs here.
+    - title: CMake
+      modal: cmake
+      packages:
+        - title: build-cmake
+          url: https://github.com/siegelaaron94/atom-build-cmake.git
     - title: GNU Make
       modal: make
       packages:
