--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -106,6 +106,11 @@
       packages:
         - title: build-powershell
           url: https://atom.io/packages/build-powershell
+    - title: CoffeeScript
+      modal: coffeescript
+      packages:
+        - title: build-coffeescript
+          url: https://atom.io/packages/build-coffeescript
 - systems:
   title: Task Runner
   modal: runner
