--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -106,6 +106,11 @@
       packages:
         - title: build-powershell
           url: https://atom.io/packages/build-powershell
+    - title: Less
+      modal: less
+      packages:
+        - title: build-less
+          url: https://atom.io/packages/build-less
 - systems:
   title: Task Runner
   modal: runner
