fix indentation, combine coffeescript packages

--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -23,11 +23,11 @@
         - title: build-jpm
           url: https://atom.io/packages/build-jpm
     - title: CoffeeScript
-      modal: CoffeeScript
+      modal: coffee
       packages:
         - title: build-gulp
           url: https://atom.io/packages/build-gulp
-          - title: build-coffeescript
+        - title: build-coffeescript
           url: https://atom.io/packages/build-coffeescript
     - title: Rust
       modal: rs
