--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -105,6 +105,7 @@
       packages:
         - title: build-powershell
           url: https://atom.io/packages/build-powershell
+- systems:
   title: Task Runner
   modal: runner
   types:
