--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -112,6 +112,15 @@
       packages:
         - title: build-innosetup
           url: https://atom.io/packages/build-innosetup
+    - title: CSS
+      modal: css
+      packages:
+        - title: build-lessc
+          url: https://atom.io/packages/build-lessc
+        - title: build-sass
+          url: https://atom.io/packages/build-sass
+        - title: build-sassc
+          url: https://atom.io/packages/build-sassc
 - systems:
   title: Task Runner
   modal: runner
@@ -214,8 +223,3 @@
       packages:
         - title: build-jpm
           url: https://atom.io/packages/build-jpm
-    - title: CSS
-      modal: css
-      packages:
-        - title: build-lessc
-          url: https://atom.io/packages/build-lessc
