--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -138,6 +138,11 @@
       packages:
         - title: build-tclsh
           url: https://atom.io/packages/build-tclsh
+    - title: R
+      modal: r
+      packages:
+        - title: build-rscript
+          url: https://atom.io/packages/build-rscript
 - systems:
   title: Task Runner
   modal: runner
