--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -125,6 +125,8 @@
           url: https://atom.io/packages/build-sassc
         - title: build-stylus
           url: https://atom.io/packages/build-stylus
+        - title: build-sugarss
+          url: https://atom.io/packages/build-sugarss
     - title: Papyrus
       modal: papyrus
       packages:
