Add catkin_tools provider
Provider for the [catkin_tools](https://catkin-tools.readthedocs.io/en/latest/) package

--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -290,3 +290,8 @@
       packages:
         - title: build-jpm
           url: https://atom.io/packages/build-jpm
+    - title: catkin_tools
+      modal: catkin build
+      packages:
+        - title: build-catkin-tools
+          url: https://github.com/artivis/atom-buils-catkin-tools
