--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -195,6 +195,8 @@
       packages:
         - title: build-oasis
           url: https://atom.io/packages/build-oasis
+        - title: build-ocaml
+          url: https://atom.io/packages/build-ocaml
 - systems:
   title: Task Runner
   modal: runner
