--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -11,16 +11,16 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout
+        uses: actions/checkout@V1
       - name: Setup Node.js
-        uses: actions/setup-node
+        uses: actions/setup-node@V1
       - name: Install Dependencies
         run: npm install
       - name: Build Website
         run: npm run build
       - name: Deploy to GitHub Pages
         if: success()
-        uses: crazy-max/ghaction-github-pages
+        uses: crazy-max/ghaction-github-pages@V1
         with:
           target_branch: master
           build_dir: public
