--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,6 @@
 name: Node.js
 
-on: push
+on: [push]
 
 jobs:
   ## Test building the website, make sure it's not broken by the push.
@@ -9,9 +9,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout
+        uses: actions/checkout@v1
       - name: Setup Node.js
-        uses: actions/setup-node
+        uses: actions/setup-node@V1
       - name: Install Dependencies
         run: npm install
       - name: Build Website
